<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
     <string name="main_text">Welcome, to your Organizer!</string>
    
    <string name="textEditor_username">Username</string>
    <string name="textEditor_password">Password</string>

    <string name="editText_email">Email</string>
    <string name="editText_password">Password</string>
   	<string name="editText_rePassord">Re-Password</string>
   	
   	<string name="button_calendar_view">Calendar</string>
    <string name="button_create_todo_view">New ToDo</string>
    <string name="button_create_event_view">New Event</string>
   	<string name="button_create_note_view">New Note</string>
   	  	<string name="view_notes">View Notes</string>
   	
  	<string name="editText_title">Title</string>
   	<string name="button_pick_date">Choose date</string>
   	<string name="editText_description">Description</string>
   	<string name="textView_create_todo_priority">Priority</string>
   	<string name="radio_todo_pririty_A">A</string>
   	<string name="radio_todo_pririty_B">B</string>
   	<string name="radio_todo_pririty_C">C</string>
   	<string name="radio_todo_pririty_D">D</string>
  	<string name="radio_todo_pririty_E">E</string>
   	
  	<string name="textView_event_whole_day">Whole day</string>
  	<string name="textView_event_start_time">Start time: </string>
  	<string name="button_time">Pick it</string>
  	<string name="textView_event_end_time">End time: </string>
   	<string name="spinner_reminder_title">When remineded</string>
  	<string-array name="spinner_reminders_values">
   	    <item >On time</item>
  	    <item >5 minutes before</item>
   	    <item >10 minutes before</item>
   	    <item >30 minutes before</item>
   	    <item >1 hour before</item>
 	    <item >1 day before</item>
	    <item >3 days before</item>
   	</string-array>
   	
  	<string name="button_note_camera">Make Photo</string>
  	<string name="image">Image</string>
  	<string name="button_note_video">Video</string>
   	<string name="button_note_photo">Get Image</string>
   	
   	<string name="button_save">Create</string>
   	<string name="button_back">Cancel</string>
   	<string name="button_delete">Delete</string>
   	
 	<string name="button_set_date">Set</string>
	<string name="empty_list">No results</string>
	
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
</resources>
