<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_title" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_event_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editText_description"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_event_whole_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_event_whole_day" />

            <ToggleButton
                android:id="@+id/toggleButton_event_whole_day"
                android:layout_width="89dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_event_start_time" />

            <Button
                android:id="@+id/button_event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_event_end_time" />

            <Button
                android:id="@+id/button_event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_time" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_event_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_reminder_title"
            android:entries="@array/spinner_reminders_values" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_create_event_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingLeft="20dp"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/button_create_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/button_back" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>